Basic Stuff Created!

--- a/src/scss/lite.scss
+++ b/src/scss/lite.scss
@@ -1,3 +1,8 @@
-* {
-    content: 'yooo';
-}
+// LiteCSS - RokyBeast
+// Version: 1.0.0
+
+@import './base';
+@import './colors';
+@import './typography';
+@import './variables';
+@import './htmlenc';
